# libKafka

./: .gitignore  Makefile.am  README.md  configure.ac  lib_kafka.cpp  lib_kafka.h  libadminkafka.pc.in
src/: Makefile.am  adminkafka.h  adminkafka.hpp  lib_kafka.h  libadminkafka.cpp  main.cpp
